ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: woof-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
     cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  tls:
    - secretName: woof-tls
      hosts:
        - badwoof.monkevicius.xyz
  rules:
  - host: badwoof.monkevicius.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: woof-web-svc
            port:
              number: 80
